@@ -1,6 +1,6 @@
 {
 	"name": "TuleapWikiFarm",
-	"version": "1.1.3",
+	"version": "1.1.4",
 	"license-name": "GPL-3.0-only",
 	"author": [
 		"[http://www.hallowelt.com Hallo Welt! GmbH]"
